fix: fix comment emmet in nomor-1

--- a/nomor-1.html
+++ b/nomor-1.html
@@ -20,7 +20,7 @@
         <th scope="col">Total</th>
       </tr>
     </thead>
-    tbody>(tr>)*4
+    <!-- tbody>(tr>)*4 -->
     <tbody>
       <tr>
         <th scope="row">Telor Dadar</th>
